--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -33,7 +33,7 @@
         android:id="@+id/showTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="switchToShow" />
+        android:text="@string/showTask" />
 
     <ListView
         android:id="@+id/nameListView"
