--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,9 +4,9 @@
     <item
         android:id="@+id/log_out"
         android:orderInCategory="100"
-        android:title="Log out"
+        android:title="@string/log_out"
         app:showAsAction="never" />
     <item
         android:id="@+id/lang_cn"
-        android:title="All User" />
+        android:title="@string/all_user" />
 </menu>
