--- a/app/src/main/res/layout/activity_personal_file.xml
+++ b/app/src/main/res/layout/activity_personal_file.xml
@@ -5,32 +5,22 @@
     android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/personalProfileToolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorButtonNormal"
-            android:orientation="horizontal">
-
-
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:gravity="left|center"
-                android:text="Kobe"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
-        </LinearLayout>
-
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme" />
     </LinearLayout>
 
     <Space
@@ -61,7 +51,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:text="@string/kobe_bryant"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
             <Button
@@ -90,54 +79,12 @@
             android:text="@string/current_tasks"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@android:color/holo_blue_dark" />
+
     </LinearLayout>
 
-    <LinearLayout
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/avatar" />
-
-            <LinearLayout
-                android:layout_width="235dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/make_a_breakfast"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/note_chinese_meal_please" />
-            </LinearLayout>
-
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-    </LinearLayout>
 
 </LinearLayout>
