--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -12,20 +12,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="67dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/add"
-            android:layout_width="126dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/add2" />
+            android:background="@drawable/add4" />
 
         <EditText
             android:id="@+id/textadd"
             android:layout_width="392dp"
-            android:layout_height="55dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:ems="10"
             android:hint="Name"
