--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -8,32 +8,49 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
+        android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/new_task"
             style="@style/Widget.AppCompat.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="38dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:onClick="createNewTasks"
-            android:text="@string/add_new_task" />
+            android:background="@drawable/add3"
+            android:onClick="createNewTasks" />
+
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="87dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="   New Task"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="14sp" />
 
         <Button
             android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:onClick="search"
-            android:text="@string/refresh" />
-    </LinearLayout>
+            android:background="@drawable/refresh"
+            android:onClick="search" />
 
-    <Switch
-        android:id="@+id/showTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="switchToShow" />
+        <Switch
+            android:id="@+id/showTask"
+            android:layout_width="219dp"
+            android:layout_height="12dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center|end"
+            android:text="Show My Tasks   "
+            android:textColor="@color/common_google_signin_btn_text_light_default" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/nameListView"
