--- a/app/src/main/res/layout/activity_personal_file.xml
+++ b/app/src/main/res/layout/activity_personal_file.xml
@@ -40,13 +40,14 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/personalProfileAvatar"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/avatar" />
 
             <TextView
+                android:id="@+id/personalProfileText"
                 android:layout_width="94dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
