--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/lang_cn"
         android:title="@string/all_user" />
+    <item
+        android:id="@+id/menuSetting"
+        android:title="Setting" />
 </menu>
