--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_wallpaper"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="ca.uottawa.leyaoli.seg2105_final_project.Tab2">
 
     <LinearLayout
         android:layout_width="match_parent"
