--- a/app/src/main/res/layout/activity_add_chore.xml
+++ b/app/src/main/res/layout/activity_add_chore.xml
@@ -24,18 +24,18 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="147dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="fill"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Task Name:"
+                android:text="@string/task_name"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/name"
-                android:layout_width="308dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
@@ -61,13 +61,13 @@
                 android:layout_gravity="fill"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Points:"
+                android:text="@string/point"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/points"
-                android:layout_width="300dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
@@ -90,13 +90,13 @@
                 android:layout_gravity="fill"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Date:"
+                android:text="@string/date"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/date"
-                android:layout_width="311dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
@@ -120,13 +120,13 @@
                 android:layout_gravity="center|fill"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Time:"
+                android:text="@string/time"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/time"
-                android:layout_width="314dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
