--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Name"
+            android:hint="@string/item_name"
             android:inputType="textPersonName"
             android:textColor="@color/common_google_signin_btn_text_dark_default" />
     </LinearLayout>
@@ -44,40 +44,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="CheckBox" />
+            android:text="@string/groceries" />
 
         <CheckBox
             android:id="@+id/checkBoxtype2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="CheckBox" />
+            android:text="@string/metarial" />
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/Type1"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/groceries"
+        android:textSize="24sp" />
 
     <ListView
         android:id="@+id/list1"
         android:layout_width="match_parent"
-        android:layout_height="103dp" />
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-    <EditText
-        android:id="@+id/Type2"
+    </ListView>
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/metarial"
+        android:textSize="24sp" />
 
     <ListView
         android:id="@+id/list2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 </LinearLayout>
