--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,7 +39,7 @@
         <item
             android:id="@+id/nav_setting"
             android:icon="@drawable/setting"
-            android:title="@string/setting" />
+            android:title="@string/action_settings" />
     </group>
 
 </menu>
