--- a/app/src/main/res/layout/activity_chore_detail.xml
+++ b/app/src/main/res/layout/activity_chore_detail.xml
@@ -23,7 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,6 +53,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/states" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/creator" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/worker" />
 
             </LinearLayout>
 
@@ -84,7 +94,20 @@
                     android:id="@+id/states"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/states" />
+                    android:hint="@string/states" />
+
+                <TextView
+                    android:id="@+id/creator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="@string/creator" />
+
+                <TextView
+                    android:id="@+id/worker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/worker" />
 
             </LinearLayout>
         </LinearLayout>
@@ -108,7 +131,9 @@
                 android:layout_weight="1"
                 android:onClick="deleteChore"
                 android:text="@string/delete" />
+
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
