--- a/app/src/main/res/layout/activity_chore_detail.xml
+++ b/app/src/main/res/layout/activity_chore_detail.xml
@@ -12,13 +12,13 @@
         android:background="@drawable/main_wallpaper"
         android:orientation="vertical">
 
-        <EditText
+        <TextView
             android:id="@+id/taskName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/name_of_task"
-            android:inputType="textPersonName" />
+            android:text="@string/name_of_task"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
