Shopping list update

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent">
 
     <CheckBox
-        android:id="@+id/checkBox1"
+        android:id="@+id/Tools_checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:duplicateParentState="false" />
 
     <TextView
-        android:id="@+id/textViewB1"
+        android:id="@+id/tool_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
