--- a/app/src/main/res/layout/chorelayout.xml
+++ b/app/src/main/res/layout/chorelayout.xml
@@ -2,8 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/main_wallpaper">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/worker_ico"
                 android:layout_width="85dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -30,21 +29,21 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/task_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/make_a_breakfast"
+                    android:text="@string/name_of_task"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/task_states"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/note_chinese_meal_please" />
+                    android:text="@string/states" />
             </LinearLayout>
 
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/finish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
