--- a/app/src/main/res/layout/chorelayout.xml
+++ b/app/src/main/res/layout/chorelayout.xml
@@ -43,12 +43,12 @@
                     android:text="@string/states" />
             </LinearLayout>
 
-            <CheckBox
+            <Button
                 android:id="@+id/finish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="@string/finish" />
 
         </LinearLayout>
     </LinearLayout>
