--- a/app/src/main/res/layout/activity_add_cup_board.xml
+++ b/app/src/main/res/layout/activity_add_cup_board.xml
@@ -19,7 +19,9 @@ android:orientation="vertical">
         android:id="@+id/cupboardstatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
 </LinearLayout>
 </LinearLayout>
