--- a/app/src/main/res/layout/activity_change_name.xml
+++ b/app/src/main/res/layout/activity_change_name.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_wallpaper"
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.UserActivity">
 
 
@@ -16,7 +17,8 @@
         android:layout_marginTop="144dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Name"
+        android:textColor="@android:color/black" />
 
     <Button
         android:id="@+id/changeNameBt"
@@ -25,7 +27,8 @@
         android:layout_below="@+id/editText3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="85dp"
-        android:text="Button" />
+        android:text="Confirm"
+        android:textSize="18sp" />
 
 </RelativeLayout>
 
