--- a/app/src/main/res/layout/activity_cup_board.xml
+++ b/app/src/main/res/layout/activity_cup_board.xml
@@ -5,7 +5,8 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context="ca.uottawa.leyaoli.seg2105_final_project.CupBoard">
+    android:background="@drawable/main_wallpaper"
+    tools:context="ca.uottawa.leyaoli.seg2105_final_project.CupBoard">
 
 <ListView
     android:id="@+id/cupboardlist"
