Nav menu update

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -41,8 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Send Message" />
+            android:hint="@string/send_message"
+            android:inputType="textPersonName" />
 
         <ImageButton
             android:id="@+id/sendButton"
