--- a/app/src/main/res/layout/activity_chore_detail.xml
+++ b/app/src/main/res/layout/activity_chore_detail.xml
@@ -143,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="update"
                 android:text="@string/common_google_play_services_update_button" />
 
             <Button
