--- a/app/src/main/res/layout/activity_personal_file.xml
+++ b/app/src/main/res/layout/activity_personal_file.xml
@@ -33,7 +33,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="My Information"
+            android:text="@string/my_information"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/common_google_signin_btn_text_light_default"
             android:textStyle="bold" />
