--- a/app/src/main/res/layout/activity_add_cup_board.xml
+++ b/app/src/main/res/layout/activity_add_cup_board.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
 
@@ -11,17 +12,20 @@ android:orientation="vertical">
 
     <CheckBox
         android:id="@+id/CupBoardcheckbox"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:text="@string/item_name"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/cupboardstatus"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:text="@string/states" />
 
 </LinearLayout>
 </LinearLayout>
