--- a/app/src/main/res/layout/activity_change_name.xml
+++ b/app/src/main/res/layout/activity_change_name.xml
@@ -17,7 +17,8 @@
         android:layout_marginTop="144dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="@string/user_name"
+        android:textAllCaps="false"
         android:textColor="@android:color/black" />
 
     <Button
@@ -27,7 +28,7 @@
         android:layout_below="@+id/editText3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="85dp"
-        android:text="Confirm"
+        android:text="@string/confirm"
         android:textSize="18sp" />
 
 </RelativeLayout>
