--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,27 +7,38 @@
     android:background="@drawable/register_signin_wallpaper"
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.LogInActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/loginEmail"
-        android:layout_width="221dp"
-        android:layout_height="134dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/loginEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
-            android:gravity="center"
-            android:hint="Email" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                android:gravity="center"
+                android:hint="@string/email" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/logInPassword"
@@ -39,26 +50,22 @@
                 android:layout_height="wrap_content"
                 android:background="@color/common_google_signin_btn_text_dark_disabled"
                 android:gravity="center"
-                android:hint="Password" />
-
-            <Space
-                android:layout_width="16dp"
-                android:layout_height="14dp"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/sign_in_button"
-                android:layout_width="29dp"
-                android:layout_height="29dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@drawable/register_check1" />
-
-            <Space
-                android:layout_width="15dp"
-                android:layout_height="13dp"
-                android:layout_weight="1" />
+                android:hint="@string/password"
+                android:inputType="numberPassword" />
 
         </android.support.design.widget.TextInputLayout>
-    </android.support.design.widget.TextInputLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <Button
+            android:id="@+id/sign_in_button"
+            android:layout_width="29dp"
+            android:layout_height="29dp"
+            android:layout_gravity="center"
+            android:background="@drawable/register_check1" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
