--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,28 +7,58 @@
     android:layout_height="match_parent"
     android:background="@drawable/register_signin_wallpaper">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/registerName"
-        android:layout_width="221dp"
-        android:layout_height="164dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:gravity="bottom"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/registerName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
-            android:gravity="center"
-            android:hint="User Name"
-            android:singleLine="true"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="bottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                android:gravity="center"
+                android:hint="@string/user_name"
+                android:singleLine="true"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/registerPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                android:gravity="center"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/registerEmail"
@@ -41,48 +71,26 @@
                 android:layout_height="wrap_content"
                 android:background="@color/common_google_signin_btn_text_dark_disabled"
                 android:gravity="center"
-                android:hint="Email Address"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/registerPassword"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="bottom">
-
-                <android.support.design.widget.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/common_google_signin_btn_text_dark_disabled"
-                    android:gravity="center"
-                    android:hint="Password"
-                    android:singleLine="true"
-                    android:textColor="@color/common_google_signin_btn_text_dark_default"
-                    android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
-
-                <Space
-                    android:layout_width="11dp"
-                    android:layout_height="13dp"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/resgisterButton2"
-                    android:layout_width="29dp"
-                    android:layout_height="29dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/register_check1"
-                    android:gravity="center" />
-
-                <Space
-                    android:layout_width="11dp"
-                    android:layout_height="13dp"
-                    android:layout_weight="1" />
-
-            </android.support.design.widget.TextInputLayout>
-
         </android.support.design.widget.TextInputLayout>
-    </android.support.design.widget.TextInputLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+        <Button
+            android:id="@+id/resgisterButton2"
+            android:layout_width="29dp"
+            android:layout_height="29dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@drawable/register_check1"
+            android:gravity="center" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
