--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -7,15 +7,6 @@
     android:background="@drawable/start_wallpaper"
     tools:context="ca.uottawa.leyaoli.seg2105_final_project.StartPage">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/registerButton1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
-        android:textSize="26sp" />
-
     <Button
         android:id="@+id/registerButton1"
         android:layout_width="wrap_content"
@@ -24,7 +15,7 @@
         android:layout_alignStart="@+id/Sign_In"
         android:layout_marginBottom="8dp"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
-        android:text="@string/register_bt"
+        android:text="@string/register"
         android:textColor="@android:color/background_light" />
 
     <Button
@@ -35,6 +26,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="34dp"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
-        android:text="Sign In"
+        android:text="@string/sign_in"
         android:textColor="@color/common_google_signin_btn_text_dark_default" />
 </RelativeLayout>
